<resources>
    <string name="confirm">CONFIRM</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="cancel">Cancel</string>
    <string name="warning_title">Warning</string>
    <string name="notification_management_notification_activity_dialog_title">Warning</string>
    <string name="transaction_detail_cancel_send_money_dialog_title">Warning</string>
    <string name="ok">OK</string>
    <string name="close_button">CLOSE</string>
    <string name="euro">\u20ac</string>
    <string name="next_button">NEXT</string>
    <string name="comma">,</string>
    <string name="share">Share with</string>
    <string name="qr_code_feature_text">Scan the QR Code\nfor one-touch payment</string>
    <string name="merchant_feature_text">Select a store and\npay in one touch</string>
    <string name="home_tutorial_ecommerce">Pay online with just a\nmobile number</string>
    <string name="money_exchange_feature_text">Select a contact from your contact list\nand send or request money</string>
    <string name="bpay_cashback_feature_text">By signing up to BPLAY, you can take part in BANCOMAT Pay cashback</string>
    <string name="transaction_detail_money_send">Money sent</string>
    <string name="p2p_result_ok">Money sent</string>
    <string name="transaction_detail_money_received">Money received</string>
    <string name="get_money_result_ok">Money request sent</string>
    <string name="invite_new_bcm_user">The contact you have selected is not yet registered with BANCOMAT Pay®, they have just received an SMS with the information to collect the money sent</string>
    <string name="p2b_result_ok">Payment completed</string>
    <string name="p2b_transaction_detail_payment_success">Payment completed</string>
    <string name="send_money_tab">Completed</string>
    <string name="get_money_tab">Requested</string>
    <string name="receipt_title">Payment receipt</string>
    <string name="empty_merchant_list">There are no stores nearby that accept BANCOMAT Pay payments</string>
    <string name="error_back_on_send_money">Are you sure you want to cancel the money transfer?</string>
    <string name="error_back_on_request_money">This operation will cancel the money request. Are you sure you want to cancel the transaction?</string>
    <string name="transaction_detail_cancel_send_money_dialog_message">Are you sure you want to cancel the money transfer?</string>
    <string name="p2p_amount_not_valid_message">The amount exceeds the spending limit set for a single payment. To change your limits, contact your bank</string>
    <string name="p2p_verify_failed_message">We\'re sorry, an error has occurred and the payment cannot be made</string>
    <string name="common_p2b_error_daily_threshold_reached">You have reached your daily spending limits. To change your limits, contact your bank</string>
    <string name="common_p2b_error_month_threshold_reached">You have reached your monthly spending limits. To change your limits, contact your bank</string>
    <string name="p2b_qrcode_is_not_valid">The payment is no longer valid</string>
    <string name="p2b_failed_get_payment_msg">It is impossible to recover the payment</string>
    <string name="contacts_list_favorites_header">Favourites</string>
    <string name="contacts_list_frequents_header">Frequent</string>
    <string name="contacts_title">Contacts</string>
    <string name="profile_spending_limits_label">Spending limits</string>
    <string name="profile_accounts_management_label">Account management</string>
    <string name="profile_multi_iban_dialog_title_send_money">Account to send money</string>
    <string name="profile_disable_profile_label">Deactivate the app</string>
    <string name="profile_bottomsheet_disable_profile_title">Deactivate the app</string>
    <string name="profile_bottomsheet_disable_profile_step_2_button_label">DEACTIVATE APP</string>
    <string name="profile_bottomsheet_disable_profile_step_3_label">We’re sorry.\nCome back soon to BANCOMAT Pay</string>
    <string name="profile_bottomsheet_disable_profile_step_3_button_label">CLOSE</string>
    <string name="profile_multi_iban_dialog_title_get_money">Account to receive money</string>
    <string name="another_banc_acc">Account of another bank with which you have enabled BANCOMAT Pay</string>
    <string name="spending_limits_subtitle">To change the spending limits contact your bank</string>
    <string name="send_money_payment_label">Money transfer</string>
    <string name="exchange_card_view">Money\ntransfer</string>
    <string name="payment_label">Payments</string>
    <string name="progress_bar_spending_limits_residual">Remaining limit</string>
    <string name="plafond_title">Remaining limit</string>
    <string name="progress_bar_spending_limits_limit_daily">Daily limit</string>
    <string name="progress_bar_spending_limits_limit_monthly">Monthly limit</string>
    <string name="profile_spending_limits_max_limit">Limit for single operation %s</string>
    <string name="profile_bottomsheet_disable_profile_label">Are you sure you want to deactivate your profile? By proceeding you will delete all your data from the BANCOMAT Pay App</string>
    <string name="profile_bottomsheet_disable_profile_step_3_title">App deactivated</string>
    <string name="profile_bottomsheet_disable_profile_step_2_label">Select a reason for deactivating the app</string>
    <string name="reason_label">Select a reason</string>
    <string name="reason_1">I don’t use BANCOMAT Pay</string>
    <string name="reason_2">It’s not clear how it works</string>
    <string name="reason_3">I want to change my mobile number</string>
    <string name="settings_notification_label">Enable contact requests</string>
    <string name="notification_management_notification_activity_dialog_label">To do this, you must enable notifications from "Settings > Notifications"</string>
    <string name="settings_notification_web_label">Enable merchant inquiries</string>
    <string name="blocked_contacts_title">Block and unblock contacts</string>
    <string name="settings_blocked_contacts_label">Block and unblock contacts</string>
    <string name="notifications_title">Notifications</string>
    <string name="notification_payment_empty_text">There are no notifications</string>
    <string name="merchant_loading_text">You are paying</string>
    <string name="recovery_payment_data">Recovery of payment data</string>
    <string name="refuse">Reject</string>
    <string name="notification_list_access_request_time_label">Access Request%s</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="accreditation">Credit to</string>
    <string name="charge_to">Charge to</string>
    <string name="transaction_detail_share_receipt">SHARE RECEIPT</string>
    <string name="transactions_money_payment">Payment</string>
    <string name="transactions_money_send">Sent</string>
    <string name="transactions_money_received">Received</string>
    <string name="transactions_money_wait">Pending</string>
    <string name="transactions_money_cancel">Cancelled</string>
    <string name="transactions_money_starling">Refunded</string>
    <string name="transaction_detail_money_expired">Expired</string>
    <string name="transaction_detail_money_refused">Refused</string>
    <string name="transactions_money_no_bpay">BPAY isn\'t available</string>
    <string name="transaction_detail_money_starling">Money refunded</string>
    <string name="transaction_detail_money_wait">Money pending</string>
    <string name="transaction_detail_money_cancel">Cancelled</string>
    <string name="transaction_detail_money_done">Completed</string>
    <string name="movements_outgoing_payment_request_sent">Request sent</string>
    <string name="transaction_detail_iban_not_available">-</string>
    <string name="authorized_info_message">Check the status of the money send in transactions section</string>
    <string name="transactions_outgoing_payment_request_failed">Request refused</string>
    <string name="transactions_outgoing_payment_request_sent">Request sent</string>
    <string name="transactions_outgoing_payment_request_expired">Request cancelled</string>
    <string name="plafond_error">Information not available</string>
    <string name="transactions_title">Transactions</string>
    <string name="transaction_detail_cancel_send_money">CANCEL SEND</string>
    <string name="message_label">Message</string>
    <string name="movements_outcome_fragment_share_success_p2p_empty">Hello! I sent you %s through BANCOMAT Pay.</string>
    <string name="merchant_list_payment_label">Pay in stores near you</string>
    <string name="merchant_card_view">Pay in stores\nnear you</string>
    <string name="documents_card_view">Documents</string>
    <string name="shop_list_item_km">km %s</string>
    <string name="p2b_result_pending">Payment in progress</string>
    <string name="send_money_loading_message">Money transfer in progress</string>
    <string name="p2p_result_ko">Money not sent</string>
    <string name="get_money_result_ko">Money request not sent</string>
    <string name="p2b_result_ko">Payment not completed</string>
    <string name="authorized_status">Payment authorized</string>
    <string name="sending_money_text">You are sending money to</string>
    <string name="request_money_text">You are requesting money from</string>
    <string name="money_request_label">sent you a request for</string>
    <string name="tab_layout_send_money">Send money</string>
    <string name="tab_layout_transaction_send_money">Send money</string>
    <string name="tab_layout_get_money">Request money</string>
    <string name="tab_layout_transaction_get_money">Request money</string>
    <string name="empty_contact_list">There are no contacts in the contact list</string>
    <string name="keyboard_send_money_text_view">Exchange money with\na new contact</string>
    <string name="qr_code_label">Scan the QR Code</string>
    <string name="search">Search…</string>
    <string name="transactions_all_movements_empty_text">There are no transactions</string>
    <string name="transactions_outgoing_payment_request_empty_text">There are no money requests</string>
    <string name="write_your_message">Enter your message here</string>
    <string name="movements_outcome_fragment_share_pending">Hello! I sent you the sum of %s through BANCOMAT Pay for \"%s\". In order to redeem it, follow the instructions received by SMS. For info on the service and the privacy notice https://bcmt.it/ip</string>
    <string name="popup_menu_voice_1">Identity card</string>
    <string name="popup_menu_voice_2">Identity electronic card</string>
    <string name="popup_menu_voice_3">Health card</string>
    <string name="popup_menu_voice_4">Driving licence</string>
    <string name="popup_menu_voice_5">Passport</string>
    <string name="popup_menu_voice_6">Other document</string>
    <string name="cashback_title">Cashback digital payments</string>
    <string name="cashback_terms_and_co_recap">In this section you can add BANCOMAT Pay to the payment tools that are part of the government\'s Cashback Digital Payments scheme.</string>
    <string name="widgets_keyboard_pin_num_pad_one">1</string>
    <string name="widgets_keyboard_pin_num_pad_two">2</string>
    <string name="widgets_keyboard_pin_num_pad_three">3</string>
    <string name="widgets_keyboard_pin_num_pad_four">4</string>
    <string name="widgets_keyboard_pin_num_pad_five">5</string>
    <string name="widgets_keyboard_pin_num_pad_six">6</string>
    <string name="widgets_keyboard_pin_num_pad_seven">7</string>
    <string name="widgets_keyboard_pin_num_pad_eight">8</string>
    <string name="widgets_keyboard_pin_num_pad_nine">9</string>
    <string name="widgets_keyboard_pin_num_pad_zero">0</string>
    <string name="widgets_keyboard_pin_num_pad_comma">,</string>
</resources>