<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:splitMotionEvents="false"
            android:windowEnableSplitTouch="false"
            android:background="@android:color/transparent">

            <LinearLayout style="@style/WidgetsKeyboardRow"
                android:background="@android:color/transparent">

                <TextView
                    android:id="@+id/num_pad_key_1"
                    style="@style/WidgetsKeyboardButtonSubmitLogin"
                    android:text="@string/widgets_keyboard_pin_num_pad_one" />

                <TextView
                    android:id="@+id/num_pad_key_2"
                    style="@style/WidgetsKeyboardButtonSubmitLogin"
                    android:text="@string/widgets_keyboard_pin_num_pad_two" />

                <TextView
                    android:id="@+id/num_pad_key_3"
                    style="@style/WidgetsKeyboardButtonSubmitLogin"
                    android:text="@string/widgets_keyboard_pin_num_pad_three" />

            </LinearLayout>

            <LinearLayout style="@style/WidgetsKeyboardRow"
                android:background="@android:color/transparent">

                <TextView
                    android:id="@+id/num_pad_key_4"
                    style="@style/WidgetsKeyboardButtonSubmitLogin"
                    android:text="@string/widgets_keyboard_pin_num_pad_four" />

                <TextView
                    android:id="@+id/num_pad_key_5"
                    style="@style/WidgetsKeyboardButtonSubmitLogin"
                    android:text="@string/widgets_keyboard_pin_num_pad_five" />

                <TextView
                    android:id="@+id/num_pad_key_6"
                    style="@style/WidgetsKeyboardButtonSubmitLogin"
                    android:text="@string/widgets_keyboard_pin_num_pad_six" />

            </LinearLayout>

            <LinearLayout style="@style/WidgetsKeyboardRow"
                android:background="@android:color/transparent">

                <TextView
                    android:id="@+id/num_pad_key_7"
                    style="@style/WidgetsKeyboardButtonSubmitLogin"
                    android:text="@string/widgets_keyboard_pin_num_pad_seven" />

                <TextView
                    android:id="@+id/num_pad_key_8"
                    style="@style/WidgetsKeyboardButtonSubmitLogin"
                    android:text="@string/widgets_keyboard_pin_num_pad_eight" />

                <TextView
                    android:id="@+id/num_pad_key_9"
                    style="@style/WidgetsKeyboardButtonSubmitLogin"
                    android:text="@string/widgets_keyboard_pin_num_pad_nine" />

            </LinearLayout>

            <LinearLayout style="@style/WidgetsKeyboardRow"
                android:background="@android:color/transparent">

                <View style="@style/WidgetsKeyboardButtonLogin" />

                <TextView
                    android:id="@+id/num_pad_key_0"
                    style="@style/WidgetsKeyboardButtonSubmitLogin"
                    android:text="@string/widgets_keyboard_pin_num_pad_zero" />

                <LinearLayout
                    android:id="@+id/num_pad_key_x"
                    style="@style/WidgetsKeyboardButtonLogin">

                    <ImageView
                        android:id="@+id/num_pad_key_x_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>